Patch #1, fix web footer alignment

--- a/assets/styles/custom.less
+++ b/assets/styles/custom.less
@@ -1099,6 +1099,15 @@ fieldset[disabled] .btn-red.active {
 
 .footer-nav{
   li{
+    float: left;
+    a{
+      display: inline !important;
+    }
+  }
+}
+
+.nav-email{
+  li{
     display: inline-block;
     width: 50px;
     a{
@@ -2006,6 +2015,10 @@ fieldset[disabled] .btn-red.active {
 
   .navbar-nav{
     margin : 0;
+  }
+
+  .footer .nav li{
+    width: 14%;
   }
 
   .footer .footer-text {
